Some change in HomeB pages

--- a/src/components/Homecomps/HomeB.css
+++ b/src/components/Homecomps/HomeB.css
@@ -145,6 +145,7 @@
   .container {
     flex-direction: column; /* Stack items vertically on medium screens */
     text-align: center;
+    padding-left: 5%;
   }
   
   .imageman img {
