--- a/src/components/Universitiescomp/Universities.css
+++ b/src/components/Universitiescomp/Universities.css
@@ -22,11 +22,12 @@
     flex-wrap: wrap;
     gap: 16px;
     justify-content: center;
-    padding: 16px;
+    padding: 15px;
+    margin-top: 2.5%;
   }
   .card:hover{
     transform: scale(1.1);
-    gap: 16px;
+    gap: 22px;
     border-radius: 25px;
     height: 20%;
    
@@ -76,7 +77,7 @@
       flex: 1 1 calc(50% - 32px);
     }
     .university-heading{
-        padding-top:25% ; 
+        margin-top: 10%; 
         font-size: 22px;
    
           }
